2006-01-10 01:00  hjanuschka

	* Makefile, src/Makefile, src/client/Makefile, src/libs/Makefile:
	  make install fixes

2006-01-10 00:53  hjanuschka

	* bartlby.cfg, include/bartlby.h, src/bartlby.c, src/check.c,
	  src/sched.c: minor changes

2006-01-09 00:20  hjanuschka

	* Makefile, bartlby.cfg, mysql.shema, src/Makefile,
	  src/client/agent.c: install target

2006-01-08 17:39  hjanuschka

	* Makefile, src/Makefile, src/client/Makefile, src/libs/Makefile:
	  make install

2006-01-08 17:17  hjanuschka

	* ChangeLog, bartlby.cfg, mysql.shema, src/bartlby.c, src/check.c,
	  src/client/agent.c, src/libs/mysql.c: mysql shema^

2005-12-31 01:29  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c, src/client/agent.c:
	  some more perf fixes during high load test

2005-12-30 21:19  hjanuschka

	* bartlby.cfg, include/bartlby.h: version bump 0.1.2a (Dynameis)

2005-12-29 21:05  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/Makefile,
	  src/perf.c, src/sched.c: core statistic (should be used in debug
	  mode only produces a biiiig file)

2005-12-28 22:40  hjanuschka

	* ChangeLog, bartlby.cfg: inline documentation of each variable in
	  config file

2005-12-27 23:00  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c: [no log message]

2005-12-26 00:01  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c, src/client/agent.c:
	  stress testing with RRD perf fixes

2005-12-25 13:55  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, perf/bartlby_load,
	  src/check.c, src/sched.c, src/libs/mysql.c: service_check_timeout
	  is dynamic now

2005-12-25 01:53  hjanuschka

	* bartlby.cfg, perf/bartlby_load: perf fixes (path to rrd tool via
	  cfg file), trigger gets BARTLBY_CONFIG

2005-12-25 01:38  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c: perf_trigger:
	  BARTLBY_CONFIG env set	       sample (bartlby_load)
	  RRD+graph sample performance trigger

2005-12-25 01:30  hjanuschka
