@@ -8,6 +8,7 @@ basedir=/storage/SF.NET/BARTLBY/bartlby-core/
 user=klewan
 logfile=/var/log/bartlby
 daemon=true
+xlogfile=/dev/stdout
 performance_dir=/storage/SF.NET/BARTLBY/bartlby-core/perf/
 pidfile_dir=/var/run/
 sched_round_pause=1
